<resources>
    <string name="app_name">MyAppProyekHary1901010046</string>
    <string name="deskripsi">Biodata</string>
    <string name="action_settings">Settings</string>
    <string name="nomor">Nomor:</string>
    <string name="nama_lengkap">Nama Lengkap:</string>
    <string name="jenis_kelamin">Jenis Kelamin:</string>
    <string name="tempat_lahir">Tempat Lahir:</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat">Alamat:</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
    <string-array name="jenis_kelamin">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
    <string name="previous">Previous</string>
    <string name="nxet">Nxet</string>
    <string name="isi_huruf">Isi Huruf</string>
    <string name="isi_angka">Isi Angka</string>
    <string name="width">Lebar</string>
    <string name="height">Tinggi</string>
    <string name="calculate">Hitung</string>
    <string name="result">Hasil</string>
    <string name="length">Panjang</string>
    <string name="jariJari">Jari-Jari</string>
    <string name="biodata_app">Crud Biodata Sederhana</string>
    <string name="volume_balok_app">Hitung Volume Balok</string>
    <string name="volume_bola_app">Hitung Volume Bola</string>
    <string name="notepad">Notepad Sederhana</string>
    <string name="kalkulator">Kalkulator</string>
    <string name="logout">Logout</string>
    <string name="nama">Nama : I Made Hary Mahayana</string>
    <string name="nim">Nim : 1901010046</string>
    <string name="suku_ayah"> Suku Ayah : Bali </string>
    <string name="suku_ibu"> Suku Ibu : Bali </string>
    <string name="hobi"> Hobi : Ngoding Dan mencari pengalaman baru</string>
    <string name="cita"> Cita-Cita : Programmer Handal</string>
    <string name="no_hp"> No.Hp/Wa : 087851410149 </string>

</resources>