<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditBiodata"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <EditText
                android:id="@+id/txID_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomor"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txNomor_Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/isi_angka"
                android:inputType="number"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_lengkap"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txNama_Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/isi_huruf"
                android:inputType="textCapSentences"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jenis_kelamin"
                android:textStyle="bold"/>
            <Spinner
                android:id="@+id/spJK_Edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/jenis_kelamin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tempat_lahir"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/txTempatLahir_Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/isi_huruf"
                android:inputType="textCapSentences"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_lahir"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txTglLahir_Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/isi_huruf"
                android:inputType="date"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txAlamat_Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/isi_huruf"
                android:inputType="textCapSentences"
                android:minHeight="48dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
