<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBiodata"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomor"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/txNomor_Add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_lengkap"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/txNama_Add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jenis_kelamin"
                android:textStyle="bold"/>
            <Spinner
                android:id="@+id/spJK_Add"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/jenis_kelamin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tempat_lahir"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txTempatLahir_Add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_lahir"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/txTglLahir_Add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusable="false"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/txAlamat_Add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:minHeight="48dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
