<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#1B7BA6"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ContactMe">
    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="500dp"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true">
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="160dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="110dp">
            <ImageView
                android:layout_width="130dp"
                android:layout_height="155dp"

                android:background="@drawable/arikmahayana"
                android:padding="10dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
           android:layout_marginTop="150dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contact Me"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_marginTop="50dp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:layout_marginLeft="50dp"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nim"
                android:layout_marginLeft="50dp"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suku_ayah"
                android:layout_marginLeft="50dp"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suku_ibu"
                android:layout_marginLeft="50dp"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cita"
                android:layout_marginLeft="50dp"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_hp"
                android:layout_marginLeft="50dp"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:orientation="vertical"
            android:layout_marginTop="440dp"
            android:layout_marginLeft="100dp">
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/btn_calling"
               android:text="Hubungi" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>